Test/git-issues/git-issue-19a.dfy.expect
git-issue-19a.dfy(12,24): Error: a forall expression involved in a predicate definition is not allowed to depend on the set of allocated references, but values of 'x' (of type 'T') may contain references (perhaps declare its type as 'T(!new)') (see documentation for 'older' parameters)
git-issue-19a.dfy(54,11): Error: type parameter (T) passed to predicate AllP must support no references (got C)
2 resolution/type errors detected in git-issue-19a.dfy
